--- a/src/index.css
+++ b/src/index.css
@@ -11,3 +11,18 @@ code {
   font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
     monospace;
 }
+.navigator{
+  width: 100vw;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+.navigator a {
+  text-decoration: none;
+  padding: 1em;
+  width: 100%;
+  box-shadow: 0px 5px 5px -3px rgba(0,0,0,0.1);
+}
+.navigator a:hover {
+  background-color: aliceblue;
+}
